<resources>
    <!-- App -->
    <string name="app_name">Hosnimal</string>

    <!-- Splash -->
    <string name="splash_description">Logo Aplikasi</string>

    <!-- On Boarding -->
    <string name="onBoarding_btn_skip">LEWATI</string>
    <string name="onBoarding_btn_next">BERIKUTNYA</string>
    <string name="onBoarding_btn_end">MUlAI SEKARANG</string>
    <string name="onBoarding_1_title">Perawatan Hewan</string>
    <string name="onBoarding_1_description">Kami memberikan pelayanan, pemeriksaan serta pengobatan karena kesehatan dan keselamatan hewan anda menjadi prioritas kami</string>
    <string name="onBoarding_2_title">Farmasi</string>
    <string name="onBoarding_2_description">Kami menyediakan makanan, obat, alat kesehatan dan kebutuhan hewan lainnya yang dibutuhkan secara online</string>
    <string name="onBoarding_3_title">Reservasi Online</string>
    <string name="onBoarding_3_description">Kami menyediakan layanan reservasi secara online dengan pemeriksaan bersama tenaga medis yang berpengalaman sehingga peliharaan anda dengan cepat ditangani tanpa menunggu antrian</string>

    <!-- Input -->
    <string name="input_name">Nama Lengkap</string>
    <string name="input_email">Alamat Email</string>
    <string name="input_phone">Nomor HP</string>
    <string name="input_birthday">Tanggal Lahir</string>
    <string name="input_birthday_date_picker">Pilih Tanggal Lahir</string>
    <string name="input_reservation_day">Tanggal Reservasi</string>
    <string name="input_reservation_day_picker">Pilih Tanggal Reservasi</string>
    <string name="input_reservation_time">Waktu Reservasi</string>
    <string name="input_reservation_time_picker">Pilih Waktu Reservasi</string>
    <string name="input_password">Kata Sandi</string>
    <string name="input_password_old">Kata Sandi Lama</string>
    <string name="input_password_new">Kata Sandi Baru</string>

    <!-- Error -->
    <string name="error_name">Silahkan masukkan nama lengkap anda</string>
    <string name="error_email">Silahkan masukkan alamat email anda</string>
    <string name="error_email_registered">Email sudah terdaftar, silahkan gunakan alamat email yang lain</string>
    <string name="error_email_not_registered">Email belum terdaftar, silahkan daftar terlebih dahulu</string>
    <string name="error_email_valid">Silahkan masukkan alamat email yang valid</string>
    <string name="error_phone">Silahkan masukkan nomor HP anda</string>
    <string name="error_birthday">Silahkan masukkan tanggal lahir anda</string>
    <string name="error_password">Silahkan masukkan kata sandi anda</string>
    <string name="error_password_not_match">Kata sandi anda salah, silahkan coba lagi</string>
    <string name="error_password_old">Silahkan masukkan kata sandi lama anda</string>
    <string name="error_password_new">Silahkan masukkan kata sandi baru anda</string>
    <string name="error_password_old_not_match">Kata sandi lama anda tidak sama, silahkan coba lagi</string>
    <string name="error_product_empty">Stok Produk Telah Habis</string>
    <string name="error_product_not_found">Produk tidak ditemukan</string>
    <string name="error_product_buy_minimum">Minimal pemesanan adalah 1 unit</string>
    <string name="error_product_buy_maximum">Pesanan melebihi stock yang tersedia</string>
    <string name="error_reservation_closed">Reservasi Telah Ditutup</string>
    <string name="error_reservation_filled">Gagal melakukan reservasi, karena telah didahului oleh seseorang</string>

    <!-- Register -->
    <string name="register_logo">Logo Hosminal</string>
    <string name="register_tag_line">Selamat Datang di Hosnimal</string>
    <string name="register_caption">Silahkan buat sebuah akun dan nikmati fitur-fitur aplikasi Hosnimal</string>
    <string name="register_btn_text">DAFTAR SEKARANG</string>
    <string name="register_alternative_caption">Sudah punya akun?</string>
    <string name="register_alternative_btn">Masuk</string>
    <string name="register_agreement_caption"><![CDATA[Dengan Membuat akun, Anda mengonfirmasi bahwa Anda menerima Ketentuan Penggunaan & Kebijakan Privasi kami]]></string>

    <!-- Login -->
    <string name="login_tag_line">Masuk Sekarang</string>
    <string name="login_caption">Silahkan masukkan data-data akun anda</string>
    <string name="login_btn_text">Masuk</string>
    <string name="login_alternative_caption">Belum punya akun?</string>
    <string name="login_alternative_btn">Daftar sekarang</string>

    <!-- Fragment Home -->
    <string name="fragment_home_title">Hai, %s</string>
    <string name="fragment_home_card_caption">Rekomendasi Mingguan</string>
    <string name="fragment_home_card_tagline">Berjalan-jalan</string>
    <string name="fragment_home_btn_see_all">Lihat semua</string>
    <string name="fragment_home_pharmacy_title">Farmasi</string>
    <string name="fragment_home_pharmacy_photo">Foto Produk</string>
    <string name="fragment_home_hospital_title">Rumah Sakit Terdekat</string>
    <string name="fragment_home_hospital_image">Foto Rumah Sakit</string>
    <string name="fragment_home_hospital_closed">Tutup</string>
    <string name="fragment_home_hospital_open">Buka</string>

    <!-- Fragment Pharmacy -->
    <string name="fragment_pharmacy_title">FARMASI</string>

    <!-- Detail Product of Pharmacy -->
    <string name="detail_product_stock">Tersisa %d barang lagi</string>
    <string name="detail_product_description">Deskripsi</string>
    <string name="detail_product_btn">Pesan Sekarang</string>
    <string name="detail_product_dialog_title">Konfirmasi Pemesanan</string>
    <string name="detail_product_dialog_text">Memesan %1$dx %2$s dengan total biaya sebesar %3$s</string>
    <string name="detail_product_dialog_positive">Pesan</string>
    <string name="detail_product_dialog_negative">Batal</string>

    <!-- Fragment Notification -->
    <string name="fragment_notification_title">NOTIFIKASI</string>
    <string name="fragment_notification_empty">Tidak ada pesan untukmu saat ini.\nSilahkan menikmati harimu :)</string>
    <string name="fragment_notification_cancel">Batal</string>
    <string name="fragment_notification_dialog_title">Konfirmasi Pembatalan Pesanan</string>
    <string name="fragment_notification_dialog_text">Membatalkan pesanan %1$dx %2$s dengan total biaya sebesar %3$s pada %4$s</string>
    <string name="fragment_notification_dialog_positive">Batalkan</string>
    <string name="fragment_notification_dialog_negative">Tutup</string>

    <!-- Fragment Map or Hospital -->
    <string name="fragment_map_hospital_title">RUMAH SAKIT</string>
    <string name="fragment_map_reservation_title">RESERVASI</string>
    <string name="fragment_map_reservation_empty">Kamu belum melakukan reservasi, ayo pilih pada rumah sakit dibawah…</string>
    <string name="fragment_map_cancel_dialog_title">Konfirmasi Pembatalan Reservasi</string>
    <string name="fragment_map_cancel_dialog_text">Membatalkan reservasi pada %1$s pukul %2$s hingga %3$s</string>
    <string name="fragment_map_cancel_dialog_negative">Tutup</string>
    <string name="fragment_map_cancel_dialog_positive">Batalkan</string>

    <!-- Detail Map or Hospital -->
    <string name="detail_hospital_reservation">Daftar Reservasi</string>
    <string name="detail_hospital_reservation_btn">Reservasi Sekarang</string>
    <string name="detail_hospital_reservation_empty">Belum ada yang melakukan reservasi, ayo reservasi sekarang</string>
    <string name="detail_hospital_reservation_time_divider">-</string>
    <string name="detail_hospital_map">Map</string>
    <string name="detail_hospital_dialog_title">Konfirmasi Reservasi</string>
    <string name="detail_hospital_dialog_text">Reservasi pada %1$s pukul %2$s hingga %3$s</string>
    <string name="detail_hospital_dialog_negative">Batal</string>
    <string name="detail_hospital_dialog_positive">Reservasi</string>

    <!-- Fragment Profile -->
    <string name="fragment_profile_title">PROFIL</string>
    <string name="fragment_profile_joined">Bergabung pada hari \n %1$s pukul %2$s</string>
    <string name="fragment_profile_edit">Edit</string>
    <string name="fragment_profile_logout">Keluar</string>

    <!-- Fragment Edit Profile -->
    <string name="fragment_edit_profile_title">EDIT PROFIL</string>
    <string name="fragment_edit_profile_bio">Data Diri</string>
    <string name="fragment_edit_profile_bio_save">Simpan</string>
    <string name="fragment_edit_profile_password">Kata Sandi</string>
    <string name="fragment_edit_profile_password_save">Ubah Kata Sandi</string>

    <!-- Navigation -->
    <string name="navigation_bar_home">Beranda</string>
    <string name="navigation_bar_maps">Map</string>
    <string name="navigation_bar_profile">Profil</string>
</resources>