<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/home_fragment">
    <fragment
        android:id="@+id/home_fragment"
        android:name="com.hosnimal.fragment.HomeFragment"
        android:label="@string/navigation_bar_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_fragment_to_maps_fragment"
            app:destination="@id/maps_fragment"/>
        <action
            android:id="@+id/action_home_fragment_to_pharmacyFragment"
            app:destination="@id/pharmacyFragment" />
        <action
            android:id="@+id/action_home_fragment_to_notificationFragment"
            app:destination="@id/notificationFragment" />
    </fragment>

    <fragment
        android:id="@+id/maps_fragment"
        android:name="com.hosnimal.fragment.MapFragment"
        android:label="@string/navigation_bar_maps"
        tools:layout="@layout/fragment_map">
        <action
            android:id="@+id/action_maps_fragment_to_profile_fragment"
            app:destination="@id/profile_fragment" />
    </fragment>

    <fragment
        android:id="@+id/profile_fragment"
        android:name="com.hosnimal.fragment.ProfileFragment"
        android:label="@string/navigation_bar_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profile_fragment_to_editProfileFragment"
            app:destination="@id/editProfileFragment" />
    </fragment>

    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.hosnimal.fragment.EditProfileFragment"
        android:label="fragment_edit_profile"
        tools:layout="@layout/fragment_edit_profile" />

    <fragment
        android:id="@+id/pharmacyFragment"
        android:name="com.hosnimal.fragment.PharmacyFragment"
        android:label="fragment_pharmacy"
        tools:layout="@layout/fragment_pharmacy" />
    <fragment
        android:id="@+id/notificationFragment"
        android:name="com.hosnimal.fragment.NotificationFragment"
        android:label="fragment_notification"
        tools:layout="@layout/fragment_notification" />
</navigation>