<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true"
    tools:context="fragment.EditProfileFragment" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_back"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginStart="@dimen/margin_medium"
            android:src="@drawable/ic_round_chevron_left_24"
            android:background="@drawable/btn_round_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginStart="@dimen/margin_medium"
            android:text="@string/fragment_edit_profile_title"
            android:textColor="@color/textPrimary"
            android:textSize="@dimen/text_title"
            android:fontFamily="@font/poppins_bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/btn_back"
            app:layout_constraintStart_toEndOf="@+id/btn_back" />

        <TextView
            android:id="@+id/bio_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/fragment_edit_profile_bio"
            android:textAlignment="textStart"
            android:textColor="@color/primary"
            android:textSize="@dimen/text_sub_title"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:hint="@string/input_name"
            app:startIconDrawable="@drawable/ic_round_person_24"
            app:startIconContentDescription="@string/input_name"
            app:endIconMode="clear_text"
            app:layout_constraintTop_toBottomOf="@+id/bio_section"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textAutoComplete"
                android:fontFamily="@font/poppins_regular" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:hint="@string/input_email"
            app:startIconDrawable="@drawable/ic_round_email_24"
            app:startIconContentDescription="@string/input_email"
            app:endIconMode="clear_text"
            app:layout_constraintTop_toBottomOf="@+id/full_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/poppins_regular" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:hint="@string/input_phone"
            app:startIconDrawable="@drawable/ic_round_phone_24"
            app:startIconContentDescription="@string/input_phone"
            app:endIconMode="clear_text"
            app:layout_constraintTop_toBottomOf="@+id/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:fontFamily="@font/poppins_regular" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/birthday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_small"
            android:hint="@string/input_birthday"
            app:startIconDrawable="@drawable/ic_round_cake_24"
            app:startIconContentDescription="@string/input_birthday"
            app:layout_constraintTop_toBottomOf="@+id/phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_date_picker"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:enabled="false"
                android:fontFamily="@font/poppins_regular" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_date_picker"
            android:layout_width="@dimen/button_icon_big"
            android:layout_height="@dimen/button_icon_big"
            android:layout_marginTop="@dimen/margin_tiny"
            android:layout_marginEnd="@dimen/margin_medium"
            android:background="@drawable/btn_round_icon"
            android:src="@drawable/ic_round_calendar_month_24"
            app:layout_constraintTop_toTopOf="@+id/birthday"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_bio_save"
            android:layout_width="@dimen/button_minimum"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:background="@drawable/btn_round_edit"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/fragment_edit_profile_bio_save"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/birthday"
            app:layout_constraintEnd_toEndOf="parent" />


        <TextView
            android:id="@+id/password_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/fragment_edit_profile_password"
            android:textAlignment="textStart"
            android:textColor="@color/primary"
            android:textSize="@dimen/text_sub_title"
            app:layout_constraintTop_toBottomOf="@+id/btn_bio_save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_old"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:hint="@string/input_password_old"
            app:startIconDrawable="@drawable/ic_round_lock_24"
            app:startIconContentDescription="@string/input_password"
            app:endIconMode="password_toggle"
            app:layout_constraintTop_toBottomOf="@+id/password_section"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:fontFamily="@font/poppins_regular" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:hint="@string/input_password_new"
            app:startIconDrawable="@drawable/ic_round_lock_24"
            app:startIconContentDescription="@string/input_password"
            app:endIconMode="password_toggle"
            app:layout_constraintTop_toBottomOf="@+id/password_old"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:fontFamily="@font/poppins_regular" />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_password_save"
            android:layout_width="@dimen/button_medium"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:background="@drawable/btn_round_edit"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/fragment_edit_profile_password_save"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/password_new"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>