<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/background"
    tools:context=".ui.login.LoginActivity" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/animation_big"
            android:layout_marginTop="@dimen/margin_medium"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/login"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_tag_line"
            android:textSize="@dimen/text_title"
            android:textColor="@color/textPrimary"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginTop="@dimen/margin_medium"
            app:layout_constraintTop_toBottomOf="@+id/animation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/sub_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_caption"
            android:textSize="@dimen/text_input"
            android:textColor="@color/textSecondary"
            android:fontFamily="@font/montserrat_regular"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:hint="@string/input_email"
            app:startIconDrawable="@drawable/ic_round_email_24"
            app:startIconContentDescription="@string/input_email"
            app:endIconMode="clear_text"
            app:layout_constraintTop_toBottomOf="@+id/sub_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/poppins_regular" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:hint="@string/input_password"
            app:startIconDrawable="@drawable/ic_round_lock_24"
            app:startIconContentDescription="@string/input_password"
            app:endIconMode="password_toggle"
            app:layout_constraintTop_toBottomOf="@+id/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:fontFamily="@font/poppins_regular" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:background="@drawable/btn_round_primary"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/login_btn_text"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/alternative_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_alternative_caption"
                android:textSize="@dimen/text_paragraph"
                android:textColor="@color/textSecondary"
                android:fontFamily="@font/poppins_semi_bold"
                app:layout_constraintTop_toTopOf="@+id/btn_alternative_register"
                app:layout_constraintBottom_toBottomOf="@+id/btn_alternative_register"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_alternative_register"
                app:layout_constraintHorizontal_chainStyle="packed" />

            <Button
                android:id="@+id/btn_alternative_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginBottom="@dimen/margin_medium"
                android:text="@string/login_alternative_btn"
                android:textSize="@dimen/text_paragraph"
                android:textColor="@color/textPrimary"
                android:fontFamily="@font/poppins_semi_bold"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                app:layout_constraintTop_toBottomOf="@+id/btn_login"
                app:layout_constraintStart_toEndOf="@+id/alternative_text"
                app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>